<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/boots"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etS_email"
            android:layout_width="@dimen/view_width"
            android:layout_height="@dimen/view_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/max_margin"
            android:background="@drawable/round_edittext"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="@dimen/min_margin"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etS_password"
            android:layout_width="@dimen/view_width"
            android:layout_height="@dimen/view_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/max_margin"
            android:background="@drawable/round_edittext"
            android:drawableLeft="@drawable/pass"
            android:drawablePadding="@dimen/draw_pas"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/max_margin"
            android:id="@+id/buttonJoin"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:background="@drawable/round_button"
            android:layout_height="wrap_content"
            android:text="@string/join_now"/>
        <TextView
            android:layout_marginTop="@dimen/min_margin"
            android:id="@+id/textViewLogin"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_login"/>


    </LinearLayout>
</RelativeLayout>