<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="8dp"
        app:cardBackgroundColor="@color/white"
        android:backgroundTint="@color/white"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/etL_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/max_margin"
                    android:background="@drawable/round_edittext"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dp"
                    android:drawableStart="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:paddingTop="8dp">

                <EditText
                    android:id="@+id/etL_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawableStart="8dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/max_margin"
                    android:background="@drawable/round_edittext"
                    android:drawableLeft="@drawable/pass"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/max_margin"
        android:background="@drawable/round_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:elevation="10dp"/>

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/textViewSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin"
        android:gravity="center_horizontal"
        android:text="@string/to_signUp"
        android:textColor="@android:color/white" />

</LinearLayout>