<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/boots"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true" />

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="bottom"
            android:padding="10dip"
            app:centered="true"
            app:fillColor="#df0623"
            app:pageColor="#fff"
            app:snap="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_signIn"
            android:layout_width="@dimen/view_width"
            android:layout_height="@dimen/view_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/max_margin"
            android:background="@drawable/round_button"
            android:text="@string/sign_in"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/main_signUp"
            android:layout_width="@dimen/view_width"
            android:layout_height="@dimen/view_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/min_margin"
            android:background="@drawable/round_button"
            android:text="@string/sign_up"
            android:textAllCaps="false" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/max_margin"
        android:gravity="center_horizontal"
        android:text="@string/terms"
        android:textColor="@android:color/white"
        android:textSize="@dimen/policy_size" />
</LinearLayout>